Fix footer overlapping with main content
Add bottom padding to main content to prevent overlap with fixed footer

--- a/src/styles/mainLayout.scss
+++ b/src/styles/mainLayout.scss
@@ -26,4 +26,5 @@
   justify-content: space-around;
   width: 100%;
   min-height: 0;
+  padding-bottom: 60px;
 }
